# thirdtask_alt

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
config/: settings.py  urls.py
graphql_app/: schema.py
orders/: admin.py  apps.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_orderitem_quantity.py
orders/services/: cart.py
products/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_price_alter_product_stock_and_more.py  0002_view_tracking.py  0003_merge_20250914_1007.py  0004_rename_products_pr_product_7c3be4_idx_products_pr_product_e6f684_idx_and_more.py
products/templatetags/: chunks.py  querystring.py
static/css/: style.css
templates/: base.html  home.html
templates/account/: profile.html
templates/admin/orders/: analytics.html
templates/admin/orders/order/: change_list.html
templates/cart/: cart_detail.html
templates/checkout/: checkout.html
templates/products/: category_list.html  product_detail.html  product_list.html
templates/registration/: login.html  register.html
users/: apps.py  context_processors.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
users/management/commands/: setup_roles.py
users/migrations/: 0001_profile.py  0002_roles.py
